[package]
name = "ydt"
version = "0.2.0"
edition = "2021"
description = "A simple command-line dictionary tool powered by Youdao"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yushengyangchem/ydt"
keywords = ["dictionary", "translation", "youdao", "cli"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
url = "2.5.8"
